--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -19,8 +19,10 @@
       <th><%= model_class.human_attribute_name(:language_id) %></th>
       <th><%= model_class.human_attribute_name(:tag_id) %></th>
       <th><%= model_class.human_attribute_name(:file) %></th>
+      <th><%= model_class.human_attribute_name(:listen) %></th>
+      <th><%= model_class.human_attribute_name(:download) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%#=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
