--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -36,6 +36,16 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :city_id, :class => 'control-label' %>
+    <div class="controls">
+      <% if @cities.present? %>
+        <%= f.collection_select :city_id, @cities, :id, :name, {:include_blank => "Select Tags"}, :class => 'number_field' %>
+      <% else %>
+        <input class="text_field", placeholder="No cities found!", readonly/>
+      <% end %>
+    </div>
+  </div>
+  <div class="control-group">
     <label class='control-label'>Upload Song</label>
     <div class="controls">
       <%= file_field_tag :file, :class => 'file_field' %>
