--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -7,11 +7,13 @@
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @song.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:category_id) %>:</strong></dt>
-  <dd><%= @song.category_id %></dd>
+  <dd><%= @song.category.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:language_id) %>:</strong></dt>
-  <dd><%= @song.language_id %></dd>
+  <dd><%= @song.language.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:tag_id) %>:</strong></dt>
-  <dd><%= @song.tag_id %></dd>
+  <dd><%= @song.tag.name %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:city_id) %>:</strong></dt>
+  <dd><%= @song.city.name %></dd>
 </dl>
 
 <div class="form-actions">
