audio player integration with html and javascript

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -26,3 +26,14 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+audio, canvas, video {
+    display: inline-block;
+    margin-left: 26px;
+}
+
+.page-header {
+    border-bottom: 1px solid #EEEEEE;
+    margin: 20px 25px 30px;
+    padding-bottom: 9px;
+}
