--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,23 @@
  *= require_self
  *= require_tree .
  */
+
+
+#playlist,audio { 
+	background:#666;
+	width:400px;
+	padding:20px;
+}
+.active a {
+	color:#5DB0E6;
+	text-decoration:none;
+}
+li a {
+	color:#eeeedd;
+	background:#333;
+	padding:5px;
+	display:block;
+}
+li a:hover {
+	text-decoration:none;
+}
