--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -9,6 +9,14 @@
     <section id="audio">  
         No song is currently playing.  
     </section>  
+</section>
+
+
+<audio id="audio" preload="auto" tabindex="0" controls="" >
+  <source src="http://www.archive.org/download/bolero_69/Bolero.mp3">
+    Your Fallback goes here
+</audio>
+
 
 <table class="table table-striped">
   <thead>
