--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,25 +9,26 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require player
  *= require_tree .
  */
 
 
 #playlist,audio { 
-	background:#666;
+	
 	width:400px;
 	padding:20px;
 }
-.active a {
-	color:#5DB0E6;
-	text-decoration:none;
+
+/* Now Playing
+================================================== */
+.nowplaying {
+	width:260px;
+	float:right;
+	font-size:11px;
 }
-li a {
-	color:#eeeedd;
-	background:#333;
-	padding:5px;
-	display:block;
+.nowplaying p{
+	margin-bottom:10px;
 }
-li a:hover {
-	text-decoration:none;
-}
+/* Custom Scroll Bar
+================================================== */
