--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,24 +3,73 @@
   <!--h1> All <%#=t '.title', :default => model_class.model_name.human.pluralize %></h1-->
 </div>
 
-<% if @songs.present? %>
-<audio id="audio" preload="auto" tabindex="0" controls="controls" content-type="application/mp3">
+  <% if @songs.present? %>
+    <audio id="audio" preload="auto" tabindex="0" controls="controls" content-type="application/mp3">
+      <source src="<%= @songs[0].song_upload.file.url  if @songs[0].song_upload.present? %>" >
+      Your Fallback goes here
+    </audio>
 
-    <source src="<%= @songs[0].song_upload.file.url  if @songs[0].song_upload.present? %>" >
-    Your Fallback goes here
-</audio>
+    <div class="playlistControl">
+      <%= render :partial => "playlist", :locals => {:songs => @songs} %>
+    </div>
+  <% else %>
+    <div class="noSongs">
+      <span>No songs available to play</span>
+    </div>
+  <% end %>
 
-<div class="playlistControl">
-  <%= render :partial => "playlist", :locals => {:songs => @songs} %>
-</div>
-<% else %>
-  <div class="noSongs">
-    <span>No songs available to play</span>
-  </div>
-<% end %>
+<!-- Now Playing Start -->
+                <div class="nowplaying">
+                    <h1 class="heading colr">Now Playing</h1>
+                    <div id="jquery_jplayer_2" class="jp-jplayer"></div>
+                    <div id="jp_container_2" class="jp-audio">
+                        <div class="jp-type-playlist">
+                            <div class="jp-gui jp-interface">
+                                <ul class="jp-controls">
+                                    <li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
+                                    <li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
+                                    <li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
+                                    <li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
+                                    <li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
+                                    <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
+                                    <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
+                                    <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
+                                </ul>
+                                <div class="jp-progress">
+                                    <div class="jp-seek-bar">
+                                        <div class="jp-play-bar"></div>
+                                    </div>
+                                </div>
+                                <div class="jp-volume-bar">
+                                    <div class="jp-volume-bar-value"></div>
+                                </div>
+                                <div class="jp-current-time"></div>
+                                <div class="jp-duration"></div>
+                                <ul class="jp-toggles">
+                                    <li><a href="javascript:;" class="jp-shuffle" tabindex="1" title="shuffle">shuffle</a></li>
+                                    <li><a href="javascript:;" class="jp-shuffle-off" tabindex="1" title="shuffle off">shuffle off</a></li>
+                                    <li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
+                                    <li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
+                                </ul>
+                            </div>
+                            <div class="jp-playlist">
+                                <div class="content">
+                                    <ul>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="jp-no-solution">
+                                <span>Update Required</span>
+                                To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Now Playing End -->
+
 
  
-
 
 
 <%#= link_to t('.new', :default => t("helpers.links.new")),
@@ -79,3 +128,5 @@ function run(link, player){
 }
 }); 
 </script>
+
+
