--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -27,7 +27,7 @@
       <th><%= model_class.human_attribute_name(:tag_id) %></th>
       <th><%= model_class.human_attribute_name(:file) %></th>
       <th><%= model_class.human_attribute_name(:listen) %></th>
-      <th><%= model_class.human_attribute_name(:download) %></th>
+      <th><%= model_class.human_attribute_name(:college) %></th>
       <th><%= model_class.human_attribute_name(:city) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -43,7 +43,7 @@
         <td><%= song.tag.name %></td>
         <td><%= File.basename(song.song_upload.file.path) %></td>
         <td><%= link_to "Audio", song.song_upload.file.url, :class => "html5" %></td> 
-        <td><%= link_to "Download", song.song_upload.file.url %></td>  
+        <td><%= song.college.name if song.college.present? %></td>  
         <td><%= song.city.name if song.city.present? %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
