--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -37,3 +37,24 @@ audio, canvas, video {
     margin: 20px 25px 30px;
     padding-bottom: 9px;
 }
+
+
+#playlist,audio { 
+	
+	width:400px;
+	padding:20px;
+}
+
+/* Now Playing
+================================================== */
+.nowplaying {
+	width:260px;
+	float:right;
+	font-size:11px;
+}
+.nowplaying p{
+	margin-bottom:10px;
+}
+/* Custom Scroll Bar
+================================================== */
+
