--- a/app/views/main/_playlist.html.erb
+++ b/app/views/main/_playlist.html.erb
@@ -7,6 +7,7 @@
   <thead>
     <tr>
       <th><%= Song.human_attribute_name(:song) %></th>
+      <th><%= College.human_attribute_name(:College) %></th>
       <th><%= Category.human_attribute_name(:category) %></th>
       <th><%= Language.human_attribute_name(:language) %></th>
       <th><%= Tag.human_attribute_name(:tag) %></th>
@@ -14,12 +15,15 @@
   </thead>
   <tbody id="playlist">
     <% songs.each do |song| %>
+    <% if song.song_upload.present? %>
       <tr class="active">
         <td><a href="<%= song.song_upload.file.url if song.song_upload.present? %>"><%= song.name %></a></td>
+        <td><%= song.college.name %></td>
         <td><%= song.category.name %></td>
         <td><%= song.language.name %></td>                
         <td><%= song.tag.name %></td>    
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
