added rails_admin and login functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,18 +44,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">IbhartiRadio</a>
+          
           <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%#= link_to "Link1", "/path1"  %></li>
-              <li><%#= link_to "Link2", "/path2"  %></li>
-              <li><%#= link_to "Link3", "/path3"  %></li>
-            </ul>
+            <%= render 'layouts/navigation' %>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
@@ -68,6 +63,7 @@
         </div><!--/span-->
         <div class="span9">
           <%= bootstrap_flash %>
+          <%#= render 'layouts/messages' %>
           <%= yield %>
         </div>
       </div><!--/row-->
