--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
-      <%= link_to 'Logout', destroy_user_session_path, :method=>'delete', :id => "sign_out" %> 
+      <%= link_to 'Logout', destroy_user_session_path, :method=> :delete, :id => "sign_out" %> 
     </li>
   <% else %>
     <li>
