--- a/app/views/colleges/_form.html.erb
+++ b/app/views/colleges/_form.html.erb
@@ -6,6 +6,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :url, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :url, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :city_id, :class => 'control-label' %>
     <div class="controls">
       <% if @cities.present? %>
