--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,14 @@
+<div style="width: 300px;">
 <h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div><%= f.label :email, :style => "font-size:  21.5px;" %><br />
+  <%= f.email_field :email, :style => "font-size:  18px;" %></div>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <div><%= f.submit "Resend confirmation instructions", :style =>"width: 150px; font-size: 18px;" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
