--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,18 @@
+<div style="width: 300px;">
 <h2>Change your password</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password %></div>
+  <div><%= f.label :password, "New password", :style => "font-size:  21.5px;" %><br />
+  <%= f.password_field :password, :style => "font-size:  18.5px;" %></div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div><%= f.label :password_confirmation, "Confirm new password", :style => "font-size:  21.5px;" %><br />
+  <%= f.password_field :password_confirmation, :style => "font-size:  18.5px;" %></div>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div><%= f.submit "Change my password", :style =>"width: 150px; font-size: 18px;" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
