--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,14 @@
+<div style="width: 300px;">
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div><%= f.label :email, :style => "font-size:  21.5px; " %><br />
+  <%= f.email_field :email, :style => "font-size:  18.5px; width: 300;" %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div><%= f.submit "Reset password", :style =>"width: 180px; font-size: 18px;" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
