--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,19 @@
 <h2>Sign up</h2>
-
+<div style="width: 300px;">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div><%= f.label :email, :style => "font-size:  21.5px;" %><br />
+  <%= f.email_field :email, :style => "font-size:  18.5px;" %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div><%= f.label :password, :style => "font-size:  21.5px;" %><br />
+  <%= f.password_field :password, :style => "font-size:  18.5px;" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div><%= f.label :password_confirmation, :style => "font-size:  21.5px;" %><br />
+  <%= f.password_field :password_confirmation, :style => "font-size: 18.5px;" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up", :style =>"width: 150px; font-size: 18px;" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
