--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,38 +2,39 @@
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
-      <%= link_to 'Home', root_path %> 
+      <%= link_to 'Home', root_path, :style => "font-size:  19.5px;" %> 
     </li>
     <li>
-      <%= link_to 'Logout', destroy_user_session_path, :method=> :delete, :id => "sign_out" %> 
+      <%= link_to 'Edit Account', edit_user_registration_path, :style => "font-size:  19.5px;" %>
+    </li>
+    <li>
+      <%= link_to 'Logout', destroy_user_session_path, :method=> :delete, :id => "sign_out", :style => "font-size:  19.5px;" %> 
     </li>
     
   <% else %>
     <li>
-      <%= link_to 'Login', new_user_session_path %>  
+      <%= link_to 'Login', new_user_session_path, :style => "font-size:  19.5px;" %>  
     </li>
     <!-- <li>
       <%#= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :id => "sign_in" %>
     </li> -->  
   <% end %>
   <% if user_signed_in? %>
-    <li>
-      <%= link_to 'Edit account', edit_user_registration_path %>
-    </li>
+    
 
     <% if current_user.has_role? :super_admin %>
       <li>
-        <%= link_to 'Admin', '/admin' %>
+        <%= link_to 'Admin', '/admin', :style => "font-size:  19.5px;" %>
       </li>
     <% end %>
     <% if current_user.has_role? :college_admin %>
       <li>
-        <%= link_to current_user.name, current_user %>
+        <%= link_to current_user.name, current_user, :style => "font-size:  19.5px;" %>
       </li>
     <% end %>
   <% else %>
     <li>
-      <%= link_to 'Sign up', new_user_registration_path %>
+      <%= link_to 'Sign up', new_user_registration_path, :style => "font-size:  19.5px;" %>
     </li>
   <% end %>
 </ul>
